src/components/Middle/middle.css
.middle {
  padding-top: 100px;
  background-color: whitesmoke;
  padding-left: 7%;
  padding-right: 18%;
  grid-area: middle;
  font-family: "Source Sans Pro", Helvetica, sans-serif;
  padding-bottom: 100px;
}

.middle hr {
  border-color: #efefef;
  background-color: #efefef;
  margin: 10vh 0px;
}

.middle h1 {
  color: #353535;
  font-size: 2em;
  line-height: 1.5em;
  font-weight: 400;
}

.middle h2 {
  color: #353535;
  font-size: 1.5em;
  line-height: 1.5em;
  font-weight: 400;
}

.middle h3 {
  color: #353535;
  font-size: 1em;
  line-height: 1.5em;
}

.middle p {
  color: #313131;
}

.middle a {
  color: #7998a5;
}

@media (--tablet-size) {
  .middle {
    padding: 0px 7%;
  }
}

